# internal/infrustructure/persistence/genealogy_members.go
@@ -1,7 +1,6 @@
 package persistence
 
 import (
-	"fmt"
 	"gorm.io/gorm"
 	"myapp-go/internal/domain"
 	"myapp-go/internal/domain/valobj"
@@ -17,27 +16,24 @@ func newGenealogyMembersRepository(db *gorm.DB) *_GenealogyMembersRepository {
 	return &_GenealogyMembersRepository{db: db}
 }
 
-func (gr *_GenealogyMembersRepository) Paging(req *valobj.GenealogyPagingReq) (rsp *valobj.GenealogyPagingRes, err error) {
-	rsp = new(valobj.GenealogyPagingRes)
+func (gr *_GenealogyMembersRepository) Paging(req *valobj.GenealogyMembersPagingReq) (rsp *valobj.GenealogyMembersPagingRes, err error) {
 	var total int64
-	mgr := domain.WxGenealogyMgr(gr.db)
-	if req.GenealogyReq.Title != "" {
-		if tx := mgr.Where("title like ?", fmt.Sprint("%", req.GenealogyReq.Title, "%")).Count(&total); tx.Error != nil {
-			log.Errorf("_GenealogyRepository count error %v", tx.Error)
-			return nil, tx.Error
-		}
-	} else {
-		if tx := mgr.Count(&total); tx.Error != nil {
-			log.Errorf("_GenealogyRepository count error %v", tx.Error)
-			return nil, tx.Error
-		}
+	mgr := domain.WxGenealogyMembersMgr(gr.db)
+	var tx *gorm.DB
+	if req.GenealogyId != 0 {
+		tx = mgr.Where("genealogy_id = ?", req.GenealogyId)
 	}
-	var genealogies []*domain.WxGenealogy
-	if tx := mgr.Limit(req.PagingReq.Limit).Offset(req.PagingReq.Offset).Find(&genealogies); tx.Error != nil {
-		log.Errorf("_GenealogyRepository paging error %v", tx.Error)
+	if tx = mgr.Count(&total); tx.Error != nil {
+		log.Errorf("_GenealogyMembersRepository count error %v", tx.Error)
 		return nil, tx.Error
 	}
+	var genealogyMembers []*domain.WxGenealogyMembers
+	if tx := mgr.Limit(req.PagingReq.Limit).Offset(req.PagingReq.Offset).Find(&genealogyMembers); tx.Error != nil {
+		log.Errorf("_GenealogyMembersRepository paging error %v", tx.Error)
+		return nil, tx.Error
+	}
+	rsp = new(valobj.GenealogyMembersPagingRes)
 	rsp.Total = total
-	rsp.Genealogies = genealogies
+	rsp.GenealogyMembers = genealogyMembers
 	return
 }
